// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedItem should render successfully 1`] = `
.c0 {
  --itemSize: 20%;
  position: absolute;
  transform: translateX(-60%);
  width: 100%;
  height: 100%;
  animation: 17.140170417003283s horizontal-movement 3.97933877306252s linear infinite;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  display: grid;
  place-items: center;
  --translateY-begin: -3%;
  --translateY-end: 31%;
  animation: 10.670527360938634s vertical-movement ease-in-out alternate infinite;
}

.c2 {
  position: absolute;
  z-index: 3;
  transform-origin: center;
  height: var(--itemSize);
  aspect-ratio: 1/1;
}

.c2::after {
  content: '';
  width: 100%;
  height: 100%;
  border-radius: 50%;
  overflow: hidden;
  display: block;
  background: #d1b896;
}

<body>
  <div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="none"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`AnimatedItem should render successfully with a rotation and no path 1`] = `
.c0 {
  --itemSize: 20%;
  position: absolute;
  transform: translateX(-60%);
  width: 100%;
  height: 100%;
  animation: 10.996571156816461s horizontal-movement 3.873373897466914s linear infinite;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  display: grid;
  place-items: center;
  --translateY-begin: -22%;
  --translateY-end: 1%;
  animation: 10.803377092813527s vertical-movement ease-in-out alternate infinite;
}

.c2 {
  position: absolute;
  z-index: 4;
  transform-origin: center;
  height: var(--itemSize);
  aspect-ratio: 1/1;
  --rotation: calc(               2 *                 360deg             );
  animation: 4.892788063963371s rotate-movement linear infinite;
}

.c2::after {
  content: '';
  width: 100%;
  height: 100%;
  border-radius: 50%;
  overflow: hidden;
  display: block;
  background: #718844;
}

<body>
  <div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="none"
        />
      </div>
    </div>
  </div>
</body>
`;
